<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="MainLogin.MainActivity"
    android:background="@color/bg_turquesa">
    <androidx.cardview.widget.CardView
        android:id="@+id/appBarCv"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/bg_turquesa">

        <LinearLayout
            android:id="@+id/arrowBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/arrowBackIv"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/arrow_back"
                android:contentDescription="@string/icono_login"
                android:theme="@style/vectorAssets">
            </ImageView>

            <ImageView
                android:layout_marginStart="20dp"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:src="@drawable/title_image_removebg"
                android:contentDescription="@string/TitleLogin">
            </ImageView>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/logo_image_removebg"
                android:contentDescription="@string/icono_login">
            </ImageView>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/ivUserIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/appBarCv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:src="@drawable/user_icon_image"
        app:tint="@color/azul_real"
        android:contentDescription="@string/iconUser">

    </ImageView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@+id/ivUserIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="16dp"
        app:cardElevation="14dp"
        android:theme="@style/fondoCards">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@color/bg_gris_claro">
            <TextView
                android:id="@+id/tvError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">
            </TextView>
            <TextView
                android:id="@+id/tvLabelName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/writeYourName"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvError" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gris_oscuro"
                android:hint="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelName" />

            <TextView
                android:id="@+id/tvLabelPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/writeYourPassword"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etName" />

            <EditText
                android:id="@+id/etContrasena1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gris_oscuro"
                android:hint="@string/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelPassword" />

            <TextView
                android:id="@+id/tvRecuperarContrasena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/recoverPassword"
                android:textColor="@color/gris_oscuro"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etContrasena1" />

            <TextView
                android:id="@+id/tvCreaCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CreateAccount"
                android:textColor="@color/gris_oscuro"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRecuperarContrasena" />

            <Button
                android:id="@+id/btLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/gris_oscuro"
                android:text="@string/login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCreaCuenta"
                android:layout_marginBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/btInvitado"
                app:layout_constraintTop_toBottomOf="@+id/btLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gris_oscuro"
                android:text="@string/guest"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>