<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_turquesa"
    tools:context=".PreferenciasActivity">

    <!-- HEADER -->
    <LinearLayout
        android:id="@+id/arrowBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/arrowBackIv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/arrow_back"
            android:padding="5dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Settings"
            android:textSize="32sp"
            android:paddingStart="10dp"/>
    </LinearLayout>


    <!-- CARD PRINCIPAL -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardAjustes"
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@+id/arrowBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- IDIOMA -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="15dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/idioma"
                    android:textSize="24sp" />

                <Spinner
                    android:id="@+id/spIdioma"
                    android:layout_width="130dp"
                    android:layout_height="45dp" />
            </LinearLayout>

            <!-- MODO OSCURO -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="15dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mode_oscuro"
                    android:textSize="24sp" />

                <Switch
                    android:id="@+id/swDarkMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- MIDA FONT -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="15dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/medida_fuente"
                    android:textSize="24sp" />

                <Spinner
                    android:id="@+id/spFontSize"
                    android:layout_width="130dp"
                    android:layout_height="45dp" />
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btCreatePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aplicar"
        app:layout_constraintTop_toBottomOf="@id/cardAjustes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>
